# raylight

./: README.md  __init__.py  class_compose.py  error.py  pyproject.toml  ray_act.py  requirements.txt
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-error-report.md
example_workflows/: Chroma_Radiance_Raylight.json  Chroma_Raylight.json  FluxDev_Data_Parallel_Raylight.json  FluxDev_Raylight.json  Flux_2_Edit_Raylight.json  Flux_2_GGUF_Raylight.json  Hunyuan_1_5_I2V_Raylight.json  Hunyuan_Video_Raylight.json  Kandinsky_I2V_Raylight.json  Qwen_Edit_Raylight.json  Qwen_Raylight.json  Stable_Diffusion_Raylight.json  WanT2V_Raylight.json  Z_Image_Turbo_Raylight.json  raylight.json
src/raylight/: grab_.py  nodes.py  nodes_debug.py  temp.py
src/raylight/chroma/distributed/: fsdp.py
src/raylight/comfy_dist/: __init__.py  float.py  fsdp_registry.py  lora.py  model_management.py  model_patcher.py  sd.py  supported_models_base.py  utils.py
src/raylight/comfy_dist/weight_adapter/: __init__.py  base.py  loha.py  lokr.py  lora.py
src/raylight/comfy_extra_dist/: nodes_custom_sampler.py  nodes_easycache.py  nodes_model_advanced.py  nodes_torch_compile.py  ray_patch_decorator.py
src/raylight/diffusion_models/: utils.py  xdit_cfg_parallel.py
src/raylight/diffusion_models/aura/: xdit_cfg_parallel.py
src/raylight/distributed_modules/: attention.py  cfg.py  sageattention_hf_patch.py  usp.py  utils.py
src/raylight/distributed_worker/: __init__.py  context_parallel.py  globals.py  meta_loader.py  model_patcher_ray.py  model_utils.py  nodes.py  nodes_model_loader.py  parallel_manager.py  ray_worker.py  utils.py  worker.py  worker_executor.py
src/raylight/expansion/: __init__.py
src/raylight/flux/: fsdp.py  xdit_context_parallel.py
src/raylight/raylight_extra/: nodes_torch_compile.py
src/raylight/wanvideo/: nodes_temp.py  pipeline.py  temp.py  test_clip.py
tests/: __init__.py  test_raylight.py
(+49 files in other folders)
